[project]
name = "audiovault-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "async-timeout>=5.0.1",
    "beautifulsoup4>=4.13.4",
    "keyring>=25.6.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
