[project]
name = "audiovault-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
    "keyring>=25.6.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
