[project]
name = "audiovault-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",
    "keyring>=25.6.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pyinstaller>=6.14.1",
    "ruff>=0.12.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "pytest-cov>=6.0.0",
]
